# edilkamin.py

./: .readthedocs.yaml  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: docs.yml  pypi-release.yml  tests.yml
docs/: Release.md  conf.py  edilkamin.rst  index.rst  readme.rst
edilkamin/: __init__.py  __main__.py  api.py  async_dispatch.py  ble.py  buffer_utils.py  constants.py  utils.py
tests/: test_api.py  test_ble.py  test_buffer_utils.py  test_cli.py  test_edilkamin.py  test_main.py
