[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edilkamin"
version = "1.5.0"
description = "Edilkamin Stove Python client"
readme = "README.md"
authors = [
    {name = "Andre Miras"}
]
requires-python = ">=3.10"
dependencies = [
    "anyio",
    "httpx",
    "pycognito",
]

[project.urls]
Homepage = "https://github.com/AndreMiras/edilkamin.py"

[project.scripts]
edilkamin = "edilkamin.__main__:main"

[project.optional-dependencies]
ble = ["simplepyble"]
dev = [
    "build",
    "coveralls",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "tox",
    "twine",
    "wheel",
    "respx",
]
doc = [
    "myst-parser",
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.setuptools.packages.find]
include = ["edilkamin*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "Q"]
